--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=nournour2020
 
 # JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+spring.jpa.open-in-view=false
