--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=library
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
-spring.datasource.username=root
-spring.datasource.password=nournour2020
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+frontend.url=${FRONTEND_URL}
 
 # JPA Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
