--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATASOURCE_URL=jdbc:mysql://localhost:3306/testdb
+DATASOURCE_URL=jdbc:mysql://localhost:3306/librarydb
 DATASOURCE_USERNAME=root
 DATASOURCE_PASSWORD=nournour2020
 FRONTEND_URL=http://localhost:5173
